<resources>
    <string name="app_name">Students Grades Calculator</string>
    <string name="app_logo_description">The logo of the app.</string>
    <string name="input_student_data_label">CALCULATE STUDENT GRADES</string>
    <string name="total_number_of_students_label">TOTAL NUMBER OF STUDENTS</string>
    <string name="students_with_grade_a_label">GRADE A STUDENTS</string>
    <string name="students_with_grade_b_label">GRADE B STUDENTS</string>
    <string name="students_with_grade_c_label">GRADE C STUDENTS</string>
    <string name="students_with_grade_d_label">GRADE D STUDENTS</string>
    <string name="students_with_grade_f_label">GRADE F STUDENTS</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="ratio_button_text">Ratios</string>
    <string name="clear_button_text">Clear</string>
</resources>